--- a/W01D02/html-bike-lab/starter-code/index.html
+++ b/W01D02/html-bike-lab/starter-code/index.html
@@ -1,62 +1,124 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Bike EXIF</title>
-  </head>
-  <body>
 
-    Home
-    Customs
-    Classics
-    Gear Reviews
-    How to Guides
-    Builds by Model
-    Shop
+<head>
+  <meta charset="utf-8">
+  <title>Bike EXIF</title>
+</head>
 
-    Killer K: Mike Flores' BMW K100 Cafe Racer
-    2 days ago / 23 comments / Custom Motorcycles
-    Is this the year of the BMW K100? We reckon so. The earlier R-series boxers have held the limelight for long enough—and let’s face it, any R donor you find now either comes at a premium, or has already been hacked. So if you’re looking for a classic Beemer, choose a K. You’ll get a...
+<body>
 
-    Monomonkee: Getting Dirty with the Wrenchmonkees
-    4 days ago / 20 comments / Custom Motorcycles
-    The dirt track revolution continues apace. Even the big guns are turning their eyes towards the ovals, and the latest to catch the bug are Nicholas Bech and Per Nielsen of the Wrenchmonkees. We’re guessing the scene is pretty small in Denmark, but it’s only a three-hour drive from Copenhagen to the German border. “Nicholas...
+  <header>
+    <img src="images/logo.svg" alt="BikeEXIF Logo">
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Classics</a></li>
+        <li><a href="#">Gear Reviews</a></li>
+        <li><a href="#">Customs</a></li>
+        <li><a href="#">How to Guides</a></li>
+        <li><a href="#">Builds by Model</a></li>
+        <li><a href="#">Shop</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
 
-    Custom Bikes of the Week: 22 January, 2017
-    A classy Moto Guzzi Centauro from the USA, a racy BMW K100 from Japan, and a brawny Honda CB750 from Vietnam. Let’s end the weekend...
+    <section>
+      <article>
+        <img src="images/large1.jpg" alt="A bike">
+        <h2><a href="#">Mike Flores' BMW K100 Cafe Racer</a></h2>
+        <p><small>days ago / 23 comments / Custom Motorcycles</small></p>
+        <p>this the year of the BMW K100? We reckon so. The earlier R-series boxers have held the limelight for long
+          enough—and let’s face it, any R donor you find now either comes at a premium, or has already been hacked. So
+          if
+          you’re looking for a classic Beemer, choose a K. You’ll get a...</p>
+      </article>
 
-    Gird Yourself: El Solitario's Street Legal Dirt Tracker
-    Batten down the hatches and don your flak jacket: The purveyors of the world’s most hated motorcycles are back. This time, the infamous El Solitario...
+      <article>
+        <img src="images/large2.jpg" alt="Another Bike">
+        <h2><a href="#">Dirty with the Wrenchmonkees</a></h2>
+        <p><small>4 days ago / 20 comments / Custom Motorcycles</small></p>
+        <p>dirt track revolution continues apace. Even the big guns are turning their eyes towards the ovals, and the
+          latest to catch the bug are Nicholas Bech and Per Nielsen of the Wrenchmonkees. We’re guessing the scene is
+          pretty small in Denmark, but it’s only a three-hour drive from Copenhagen to the German border. “Nicholas...
+        </p>
+      </article>
+    </section>
 
-    Review: Scramber Ducati Desert Sled
-    You don’t need to be a regular reader to know that scramblers are hot. Over the last few years, the term has become the go-to...
+    <section>
 
-    Next
+      <article>
+        <img src="images/small1.jpg" alt="Mores Bikes">
+        <h3><a href="#">Bikes of the Week: 22 January, 2017</a></h3>
+        <p>classy Moto Guzzi Centauro from the USA, a racy BMW K100 from Japan, and a brawny Honda CB750 from Vietnam.
+          Let’s end the weekend...</p>
+      </article>
 
-    Subscribe and win $100
-    Sign up for the Bike EXIF email to get the latest customs as soon as they’re published. We'll also enter you into our monthly draw to win $100 to spend in Equipment, our motorcycle gear store.
+      <article>
+        <img src="images/small2.jpg" alt="And Yet More Bikes">
+        <h3><a href="#">Yourself: El Solitario's Street Legal Dirt Tracker</a></h3>
+        <p>down the hatches and don your flak jacket: The purveyors of the world’s most hated motorcycles are back.
+          This time, the infamous El Solitario...</p>
+      </article>
 
-    Categories
+      <article>
+        <img src="images/small3.jpg" alt="Even Blooming More Bikes">
+        <h3><a href="#">Scramber Ducati Desert Sled</a></h3>
+        <p>ou don’t need to be a regular reader to know that scramblers are hot. Over the last few years, the term has
+          become the go-to...</p>
+        </article>
 
-    Custom Motorcycles
-    Classic Motorcycles
-    Racing Motorcycles
-    Production Motorcycles
-    Motorcycle Gear
-    Special Features
-    Concept Motorcycles
-    Interviews
-    Top 5
-    Ten Best Motorcycles
+    </section>
 
-    About
-    Contact
-    Advertise
-    Privacy
-    Terms of user
-    Submit your bike
+    <a href="#" Next></a>
 
-    &copy; 2008-2017 Garagista Media, PO BOX 668, Warkworth 0941, New Zealand
+    <aside>
+      <form>
+        <input type="text" name="search" placeholder="What are you looking for?">
+      </form>
+      <div>
+        <form>
+          <h4>Subscribe and win $100</h4>
+          <p>up for the Bike EXIF email to get the latest customs as soon as they’re published. We'll also enter you
+            into
+            our monthly draw to win $100 to spend in Equipment, our motorcycle gear store.</p>
+          <input type="text" name="name" id="name" required placeholder="First Name...">
+          <input type="text" name="email" id="email" required placeholder="Email...">
+          <input type="submit" value="SEND">
+        </form>
+      </div>
+      <div>
+        <h4>Categories</h4>
+        <ul>
+          <li><a href="#">Custom Motorcycles</a></li>
+          <li><a href="#">Classic Motorcycles</a></li>
+          <li><a href="#">Racing Motorcycles</a></li>
+          <li><a href="#">Production Motorcycles</a></li>
+          <li><a href="#">Motorcycle Gear</a></li>
+          <li><a href="#">Special Features</a></li>
+          <li><a href="#">Concept Motorcycles</a></li>
+          <li><a href="#">Interviews</a></li>
+          <li><a href="#">Top 5</a></li>
+          <li><a href="#">Ten Best Motorcycles</a></li>
+        </ul>
+      </div>
+    </aside>
 
-  </body>
+  </main>
+
+  <footer>
+    <img src="images/logo.svg" alt="BikeEXIF Logo">
+
+    <li><a href="#" About></a></li>
+    <li><a href="#">Contact</a></li>
+    <li><a href="#">Advertise</a></li>
+    <li><a href="#">Privacy</a></li>
+    <li><a href="#">Terms of user</a></li>
+    <li><a href="#">Submit your bike</a></li>
+
+    <p>&copy; 2008-2017 Garagista Media, PO BOX 668, Warkworth 0941, New Zealand</p>
+  </footer>
+</body>
+
 </html>
