--- a/W02D02/jsES6-functions-lab/starter-code/index.html
+++ b/W02D02/jsES6-functions-lab/starter-code/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="/js/app.js" charset="utf-8"></script>
+    <script src="js/app.js" charset="utf-8"></script>
   </head>
   <body>
 
