--- a/W03D02/daftpunk/index.html
+++ b/W03D02/daftpunk/index.html
@@ -6,103 +6,98 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="scripts/app.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
   <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/main.css">
   <title>DaftPunk Sound Board</title>
 </head>
 
 <body>
-  <div class="img-wrapper">
     <img src="images/dp-transparent-logo.png" alt="Daft Punk Logo">
-  </div>
 
-  <div class="columns">
-    <div class="sound-wrapper column columns is-multiline is-half is-offset-one-quarter">
+    <div class="sound-wrapper">
 
-      <div class="after sound column is-3">
+      <div class="after sound">
         <p>After</p>
         <audio src="sounds/after.wav"></audio>
       </div>
 
-      <div class="better sound column is-3">
+      <div class="better sound">
         <p>Better</p>
         <audio src="sounds/better.wav"></audio>
       </div>
 
-      <div class="do-it sound column is-3">
+      <div class="do-it sound">
         <p>Do It</p>
         <audio src="sounds/do_it.wav"></audio>
       </div>
 
-      <div class="ever sound column is-3">
+      <div class="ever sound">
         <p>Ever</p>
         <audio src="sounds/ever.wav"></audio>
       </div>
 
-      <div class="faster sound column is-3">
+      <div class="faster sound">
         <p>Faster</p>
         <audio src="sounds/faster.wav"></audio>
       </div>
 
-      <div class="harder sound column is-3">
+      <div class="harder sound">
         <p>Harder</p>
         <audio src="sounds/harder.wav"></audio>
       </div>
 
-      <div class="hour sound column is-3">
+      <div class="hour sound">
         <p>Hour</p>
         <audio src="sounds/hour.wav"></audio>
       </div>
 
-      <div class="make-it sound column is-3">
+      <div class="make-it sound">
         <p>Make It</p>
         <audio src="sounds/make_it.wav"></audio>
       </div>
 
-      <div class="makes-us sound column is-3">
+      <div class="makes-us sound">
         <p>Makes Us</p>
         <audio src="sounds/makes_us.wav"></audio>
       </div>
 
-      <div class="more-than sound column is-3">
+      <div class="more-than sound">
         <p>More Than</p>
         <audio src="sounds/more_than.wav"></audio>
       </div>
 
-      <div class="never sound column is-3">
+      <div class="never sound">
         <p>Never</p>
         <audio src="sounds/never.wav"></audio>
       </div>
 
-      <div class="our sound column is-3">
+      <div class="our sound">
         <p>Our</p>
         <audio src="sounds/our.wav"></audio>
       </div>
 
-      <div class="over sound column is-3">
+      <div class="over sound">
         <p>Over</p>
         <audio src="sounds/over.wav"></audio>
       </div>
 
-      <div class="stronger sound column is-3">
+      <div class="stronger sound">
         <p>Stronger</p>
         <audio src="sounds/stronger.wav"></audio>
       </div>
 
-      <div class="work-is sound column is-3">
+      <div class="work-is sound">
         <p>Work Is</p>
         <audio src="sounds/work_is.wav"></audio>
       </div>
 
-      <div class="work-it sound column is-3">
+      <div class="work-it sound">
         <p>Work It</p>
         <audio src="sounds/work_it.wav"></audio>
       </div>
-    </div>
 
   </div>
-  <div class="extra-space"></div>
+ 
 </body>
 
 </html>
