--- a/W07D01/revision-lab/src/index.html
+++ b/W07D01/revision-lab/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>CheeseBored</title>
   </head>
   <body>
-    <div class="root"></div>
+    <div id="root"></div>
   </body>
 </html>
